// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uiFunctions handleRenderGroupSeparator Should match snapshot 1`] = `
<DocumentFragment>
  <hr
    class="___separator"
  />
</DocumentFragment>
`;

exports[`uiFunctions handleRenderGroupSeparator Should match snapshot 2`] = `
<DocumentFragment>
  <div
    class="___separator"
  >
    <h2 />
  </div>
</DocumentFragment>
`;

exports[`uiFunctions handleRenderGroupSeparator Should match snapshot 3`] = `
<DocumentFragment>
  <div
    class="___separator"
  >
    <h2>
      label
    </h2>
  </div>
</DocumentFragment>
`;

exports[`uiFunctions handleRenderGroupSeparator Should match snapshot 4`] = `
<DocumentFragment>
  <div
    class="___separator"
  >
    <h2 />
  </div>
</DocumentFragment>
`;

exports[`uiFunctions handleRenderItem Should match snapshot 1`] = `<DocumentFragment />`;

exports[`uiFunctions handleRenderItem Should match snapshot 2`] = `
<DocumentFragment>
  <div>
    item name
  </div>
</DocumentFragment>
`;

exports[`uiFunctions renderBlank Should match snapshot 1`] = `
<DocumentFragment>
  <p>
    List is empty...
  </p>
</DocumentFragment>
`;

exports[`uiFunctions renderBlank Should match snapshot 2`] = `
<DocumentFragment>
  <p>
    nothing
  </p>
</DocumentFragment>
`;
